add string format

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/devxleo/mockit#readme",
   "dependencies": {
     "path-to-regexp": "^1.7.0",
+    "uuid": "^3.0.1",
     "webpack": "^2.2.0-rc.2"
   }
 }
